--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node srvrt.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "repository": {
